--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <div class="container">
       <h1>hey, read first before you close it :> (made by khimm)</h1>
 
-      <img src="b9b232952b22a6dfcee8148f2650129b.gif" alt="Valentine's Image">  <p>hey ing,</p>
-      <p>i've been thinking about you, and i want to spend valentine's day with you.  would you be my valentine?</p>
+      <img src="b9b232952b22a6dfcee8148f2650129b.gif" alt="Valentine's Image">  <p>(to siving.)hai bb,</p>
+      <p>i wouldn't want to overstep this, but there is really something special about you. i would love to take the chance to spend valentine's day with you. may i be your valentine..?  </p>
 
 
       <div class="buttons">
@@ -88,3 +88,4 @@
     </script>
 </body>
 </html> 
+
